# speedupdate-rs

./: Cargo.toml  Dockerfile  pkey
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  build_container.yaml  release-chart.yml  release.yml
allo2/macos_arm64/: versions
allo4/macos_arm64/: versions
allo5/macos_arm64/: packages
allo5/macos_x86_64/: versions
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingressroute.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
chart/templates/tests/: test-connection.yaml
cli/: Cargo.toml
cli/src/: main.rs  repository.rs  workspace.rs
lib/: Cargo.toml
lib/src/: io.rs  lib.rs
lib/src/codecs/: brotli.rs  lzma.rs  mod.rs
lib/src/handlers/: direct.rs  mod.rs  sliced.rs
lib/src/link/: file.rs  https.rs  mod.rs
lib/src/metadata/: dijkstra.rs  mod.rs
lib/src/repository/: mod.rs  packager.rs  progress.rs
lib/src/workspace/: apply.rs  check.rs  download.rs  mod.rs  progress.rs  updater.rs
server/: Cargo.toml  build.rs
server/proto/: speedupdate.proto
server/src/: ftp.rs  http.rs  main.rs  multiplex_service.rs  rpc.rs
