[package]
name = "libspeedupdate"
version = "0.10.0"
authors = ["Vincent Rouillé <vincent@speedy37.fr>"]
edition = "2021"

[features]
default = ["brotli", "lzma", "vcdiff", "zstd", "ue4pak"]
lzma = ["xz2", "lzma-sys"]

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.42"
base64 = "0.22"
byte-unit = "5.1.4"
bytes = "1.0"
futures = "0.3"
num_cpus = "1.13.0"
parking_lot = "0.12.1"
reqwest = { version = "0.12", default-features = false, features = ["http2", "charset", "macos-system-configuration", "json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.10.1"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = { version = "0.1", features = ["log"] }

brotli = { package = "brotli", version = "8.0", optional = true }
ue4pak = { git = "https://github.com/Speedy37/ue4pak-rs.git", optional = true }
vcdiff = { git = "https://github.com/Speedy37/vcdiff-rs.git", package = "vcdiff-rs", optional = true }
xz2 = { version = "0.1.6", optional = true }
lzma-sys = { version = "0.1.17", optional = true }
zstd = { version = "0.13.0", optional = true }

[dev-dependencies]
env_logger = "0.11.1"
fs_extra = "1.2.0"
