[package]
name = "speedupdateserver"
version = "0.10.0"
edition = "2021"
authors = ["Ludea"]
license = "MIT"
description = """
Speedupdate api
"""
	
[dependencies]
anyhow = "1.0.66"
axum = { version = "0.6.20", features = ["multipart"] }
futures = { version = "0.3", default-features = false }
instant-acme = "0.4.0"
libunftp = { git = "https://github.com/bolcom/libunftp" } 
unftp-sbe-fs = "0.2"
pretty_env_logger = "0.5"
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libspeedupdate = { path = "../lib" }
tonic = {version = "0.10", features = ["tls", "gzip"] }
tonic-web = "0.10"
tower-http = { version = "0.4", features = ["fs", "trace", "cors"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "env-filter"] }
hyper = "1.3"
http = "1.1.0"
tower = { version = "0.4", features = ["full"] }
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
console-subscriber = "0.2.0"

[build-dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }
prost-build = "0.12"
protox = "0.6"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/speedupdateserver", dest = "/usr/bin/speedupdateserver", mode = "755" },
]
