[package]
name = "speedupdateserver"
version = "0.10.0"
edition = "2021"
authors = ["Ludea"]
license = "MIT"
description = """
Speedupdate api
"""

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
futures = { version = "0.3", default-features = false }
#instant-acme = "0.7.1"
#libunftp = "0.20"
#unftp-sbe-fs = "0.2"
pretty_env_logger = "0.5"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libspeedupdate = { path = "../lib" }
tonic = { version = "0.12", features = ["gzip"] }
tonic-web = "0.12"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "env-filter"] }
hyper = "1.3"
http = "1.1.0"
tower = { version = "0.5", features = ["full"] }
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
jsonwebtoken = "9.3.0"
base64 = "0.22.1"
ring = "0.17.8"
http-body-util = "0.1.2"

[build-dependencies]
tonic-build = { version = "0.12.1", features = ["prost"] }
prost-build = "0.13"
protox = "0.7"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/speedupdateserver", dest = "/usr/bin/speedupdateserver", mode = "755" },
]
