[package]
name = "speedupdateserver"
version = "0.10.0"
edition = "2021"
authors = ["Ludea"]
license = "MIT"
description = """
Speedupdate api
"""

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
futures = { version = "0.3", default-features = false }
pretty_env_logger = "0.5"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libspeedupdate = { path = "../lib" }
tonic = { version = "0.13", features = ["gzip"] }
tonic-web = { git = "https://github.com/MarkusTieger/tonic", features = ["axum"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "env-filter"] }
hyper = "1.3"
http = "1.1.0"
tower = { version = "0.5", features = ["full"] }
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
jsonwebtoken = "9.3.0"
base64 = "0.22.1"
ring = "0.17.8"
http-body-util = "0.1.2"
zip = "3.0.0"

[build-dependencies]
tonic-build = { version = "0.13.0", features = ["prost"] }
prost-build = "0.13"
protox = "0.8"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/speedupdateserver", dest = "/usr/bin/speedupdateserver", mode = "755" },
]
